wordpress/latest/php7.4/apache/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp1
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: blog1.rodxolotl.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wp1
                port:
                  number: 80
